RESOLVED FIXED84129
[EFL] ResourceError domain needs to be properly set in FrameLoaderClient
https://bugs.webkit.org/show_bug.cgi?id=84129
Summary [EFL] ResourceError domain needs to be properly set in FrameLoaderClient
Chris Dumez
Reported 2012-04-17 00:28:48 PDT
Currently, EFL's FrameLoaderClient sets the ResourceError's domain to "Error", no matter what kind of error it is. The ResourceError's needs to be appropriately set so that it is possible to distinguish NSURL errors from WebKit errors. This functionality is needed in the DumpRenderTree to generate correct output for LayoutTestController's dumpResourceLoadCallbacks().
Attachments
Proposed patch (6.21 KB, patch)
2012-04-17 04:50 PDT, Chris Dumez
japhet: review+
Patch (6.15 KB, patch)
2012-04-27 03:21 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-04-17 04:50:24 PDT
Created attachment 137515 [details] Proposed patch
Chris Dumez
Comment 2 2012-04-27 03:12:08 PDT
Comment on attachment 137515 [details] Proposed patch Clear cq? flag since the patch needs rebasing.
Gyuyoung Kim
Comment 3 2012-04-27 03:15:47 PDT
Yes, plz submit rebased patch again. Request only cq?. In addition, write reviewer name in changelog.
Chris Dumez
Comment 4 2012-04-27 03:21:27 PDT
Created attachment 139162 [details] Patch Patch for landing.
WebKit Review Bot
Comment 5 2012-04-27 11:05:14 PDT
Comment on attachment 139162 [details] Patch Clearing flags on attachment: 139162 Committed r115451: <http://trac.webkit.org/changeset/115451>
WebKit Review Bot
Comment 6 2012-04-27 11:05:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.